--- a/src/app.css
+++ b/src/app.css
@@ -17,4 +17,10 @@
 	font-style: normal;
 	font-weight: 400;
 	src: url(https://fonts.googleapis.com/css?family=Bangers);
+	src: url('./fonts/Bangers.woff2'); /* IE9 Compat Modes */
+	src: local(''), url('./fonts/Bangers.woff2?#iefix') format('embedded-opentype'),
+		/* IE6-IE8 */ url('fonts/Bangers.woff2') format('woff2'),
+		/* Super Modern Browsers */ url('./fonts/Bangers.woff') format('woff'),
+		/* Modern Browsers */ url('./fonts/Bangers.ttf') format('truetype'),
+		/* Safari, Android, iOS */ url('./fonts/Bangers.svg#Lora') format('svg'); /* Legacy iOS */
 }
