--- a/src/app.css
+++ b/src/app.css
@@ -14,13 +14,14 @@
 
 @font-face {
 	font-family: 'Bangers';
+	src: url('/fonts/bangers/Bangers-Regular.eot');
+	src: local('Bangers Regular'), local('Bangers-Regular'),
+		url('/fonts/bangers/Bangers-Regular.eot?#iefix') format('embedded-opentype'),
+		url('/fonts/bangers/Bangers-Regular.woff2') format('woff2'),
+		url('/fonts/bangers/Bangers-Regular.woff') format('woff'),
+		url('/fonts/bangers/Bangers-Regular.ttf') format('truetype'),
+		url('/fonts/bangers/Bangers-Regular.svg#Bangers-Regular') format('svg');
+	font-weight: normal;
 	font-style: normal;
-	font-weight: 400;
-	src: url(https://fonts.googleapis.com/css?family=Bangers);
-	src: url('/fonts/Bangers.woff2'); /* IE9 Compat Modes */
-	src: local(''), url('/fonts/Bangers.woff2?#iefix') format('embedded-opentype'),
-		/* IE6-IE8 */ url('fonts/Bangers.woff2') format('woff2'),
-		/* Super Modern Browsers */ url('/fonts/Bangers.woff') format('woff'),
-		/* Modern Browsers */ url('/fonts/Bangers.ttf') format('truetype'),
-		/* Safari, Android, iOS */ url('/fonts/Bangers.svg#Lora') format('svg'); /* Legacy iOS */
+	font-display: swap;
 }
